# ROS2_files

./: .gitignore  .zshrc  README.md  ROS2_notes.md
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/my_cpp_pkg/: package.xml
ros2_ws/src/my_cpp_pkg/src/: .clangd  led_panel.cpp  my_first_node.cpp  node_template.cpp  robot_news_station.cpp  smartphone.cpp
ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2_ws/src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  hw_status_publisher.py  led_panel.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
ros2_ws/src/my_robot_bringup/: package.xml
ros2_ws/src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml  number_app.launch.py  robot_news_station.launch.py  turtlesim_catch_them_all.launch.py
ros2_ws/src/my_robot_bringup/worlds/: test_world.world
ros2_ws/src/my_robot_description/: package.xml
ros2_ws/src/my_robot_description/launch/: arm_display.launch.xml  display.launch.py  display.launch.xml
ros2_ws/src/my_robot_description/rviz/: urdf_config.rviz
ros2_ws/src/my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  standalone_arm.urdf.xacro
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/turtlesim_catch_them_all/: package.xml  setup.py
(+9 files in other folders)
